example.html updated

--- a/resources/example.html
+++ b/resources/example.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <script src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
-    <script src="file:///Users/karol/workspace/karol/github/clip-path-polygon/js/clip-path-polygon.js"></script>
+    <script src="https://cdn.rawgit.com/andrusieczko/clip-path-polygon/master/build/clip-path-polygon.min.js"></script>
     <script>
       $(function() {
         var points1 = [[0, 0], [145, 0], [150, 20], [155, 0], [300, 0], [300, 200], [0, 200], [0, 0]];
